--- a/src/components/OrderPage/Order/Order.css
+++ b/src/components/OrderPage/Order/Order.css
@@ -15,3 +15,11 @@
 .order-form textarea{
     height: 120px;
 }
+.submit-button{
+    background: #111430;
+    padding:  0 60px 0 60px;
+    width: 170px;
+}
+.submit{
+    width: 170px;
+}
